# bevy-platformer

./: .gitignore  Cargo.toml  LICENSE
.cargo/: config.toml
assets/spritesheets/: tiles.aseprite
src/: animation.rs  camera.rs  collisions.rs  hello.rs  input.rs  level_builder.rs  lib.rs  main.rs  movement.rs  platform.rs  player.rs  player_animation.rs
src/surfaces/: ground.rs
